correct wrong word

--- a/help.html
+++ b/help.html
@@ -246,6 +246,6 @@ ul.task-list{list-style: none;}
 <li><code>ceil</code>: 無條件進位法，如<code>ceil(0.1)</code>是1</li>
 <li><code>sign</code>: 如果輸入大於0，傳回1，如果輸入小於0，傳回-1，否則傳回0或-0</li>
 </ul>
-<p><a href="https://developer.mozilla.org/zh-TW/docs/Web/JavaScript/Reference/Global_Objects/Math">數學含式參考</a></p>
+<p><a href="https://developer.mozilla.org/zh-TW/docs/Web/JavaScript/Reference/Global_Objects/Math">數學函式參考</a></p>
 </body>
 </html>
